--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
 
         <section id="contact">
             <h2>Контакты</h2>
-            <p>Email: info@example.com</p>
+            <p>Email: kovylinartem94@gmail.com</p>
             <p>Телефон: +7 (123) 456-78-90</p>
         </section>
     </main>
